Fix footer width for posts on mobile devices.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -214,6 +214,7 @@ footer {
 @media all and (max-width: 830px) {
   footer {
     margin: 0 20px;
+    width: calc(100% - 40px);
 
     .contact {
       line-height: normal;
